--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1, shrink-to-fit=no"
 		/>
-		<title>WebXR Sample</title>
+		<title>真真眼镜店</title>
 		<!-- CSS only -->
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
